--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body id ="puebloPaleta">
     <audio autoplay src="03_Pallet Towns Theme.mp3"></audio>
 
     <header>
