html media changes js changePageAdd css selection update

--- a/Combate.html
+++ b/Combate.html
@@ -13,6 +13,7 @@
 </head>
 
 <body id="combate">
+    <audio autoplay src="./42_The Last Road.mp3"></audio>
     <header>
         <img src="./Imagenes_Coliseo/Header3.png">
         <nav id="links">
@@ -31,6 +32,7 @@
             <input id="buscador2" class="player2" type="text2" placeholder="Pokemon 2">
             <input id="button2" class="player2"type="submit" value="Buscar">
         </div>
+        <div id="vs"></div>
     </header>
 
 
