--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body id ="puebloPaleta">
-    <audio autoplay src="03_Pallet Towns Theme.mp3"></audio>
+    <audio autoplay src="./03_Pallet_Towns_Theme.mp3"></audio>
 
     <header>
         <img src="Pokemon_Header2.png">
