--- a/pokemonVSpokemon.html
+++ b/pokemonVSpokemon.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body id="pokemonVSpokemon">
+    <img src="./Imagenes_Coliseo/Batalla.png" alt="">
+
     <script src="./Combate.js"></script>
 </body>
 </html>
